--- a/MessengerConsole/MessengerConsole.csproj
+++ b/MessengerConsole/MessengerConsole.csproj
@@ -15,4 +15,17 @@
       <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="tokenstorage.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Properties" />
+    </ItemGroup>
+
 </Project>
