--- a/MessengerConsole/appsettings.json
+++ b/MessengerConsole/appsettings.json
@@ -1,37 +1,34 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
-    },
-    
-    "Api": {
-        "BaseUrl": "https://localhost:5001"
-    },
-    
-    "ConsoleColor": {
-        "DefaultBack": "DarkGray",
-        "DefaultFore": "Black",
-        
-        "CommandBack": "Black",
-        "CommandFore": "Red",
-        
-        "TabBack": "White"
-    },
-    
-    "Commands": [
-        "/home", 
-        "/register", 
-        "/login"
-    ],
-
-    "Example": [
-        {"One": "about first"},
-        {"Two": "about second"},
-        {"Three": "about third"},
-        {"Four": "about fourth"},
-        {"Five": "about fifth"}
-    ]
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  },
+  "Api": {
+    "BaseUrl": "https://localhost:5001"
+  },
+  "ColorOptions": {
+    "DefaultBack": "DarkGray",
+    "DefaultFore": "Black",
+    "CommandBack": "Black",
+    "CommandFore": "Red",
+    "TabBack": "White"
+  },
+  "CommandOptions": {
+    "Commands": {
+      "/home": "Home page",
+      "/register": "Registration page",
+      "/login": "Login page"
+    }
+  },
+  
+  "CursorOptions": {
+    "TabL": 70,
+    "TabT": 0,
+    "InputTypeDistanceL": 70,
+    "ReadLineL": 70,
+    "ReadLineT": 25
+  }
 }
